<resources>
    <string name="app_name">Stream&amp;Watch</string>
    <string name="Email">email</string>
    <string name="Password">password</string>
    <string name="NoAccount">Don\'t you have an account?</string>
    <string name="HaveAccount">Already have an account?</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Name">name</string>
    <string name="Surname">surname</string>
    <string name="Phone">phone number</string>
    <string name="ForgotPass">Forgot Password?</string>
    <string name="txt_or">OR</string>
    <string name="google_login">Login with Google</string>
    <string name="google_signup">Sign Up with Google</string>
    <string name="EmailPasswordError">email or password not valid</string>
    <string name="EmailWrong">email not valid</string>
    <string name="PasswordWrong">password not valid</string>
    <string name="Name_Surname_Wrong">One or more characters not accepted</string>
    <string name="PhoneNumberWrong">Invalid number</string>
    <string name="SignupWrong">Data invalid</string>
    <string name="Search">Search movie...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>