<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".Fragments.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/signText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:layout_marginTop="84dp"
            android:layout_marginStart="32dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64sp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgroung"
            android:ems="10"
            android:hint="@string/Name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/surnameText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgroung"
            android:ems="10"
            android:hint="@string/Surname"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgroung"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgroung"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_backgroung"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/Phone"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupBtn"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/orange_button_background"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HaveAccount"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAlignment="center"/>
    </LinearLayout>

</FrameLayout>