<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".Fragments.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:layout_marginTop="84dp"
                android:layout_marginStart="32dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64sp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_backgroung"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_backgroung"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ForgotPass"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="32dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBtn"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/orange_button_background"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoAccount"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignUp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>